fix emoji alignment in bottom nav

--- a/src/components/BottomNav/BottomNav.sass
+++ b/src/components/BottomNav/BottomNav.sass
@@ -27,8 +27,7 @@
       display: block
       font-size: 24px
       line-height: 24px
-      height: 24px
-      width: 24px
+      text-align: center
       margin: 0 auto 4px auto
     .title
       display: block
